Bug 247218 - WebKit should not depend on CA's implicit auto-upgrade to extendedSRGB
Summary: WebKit should not depend on CA's implicit auto-upgrade to extendedSRGB
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Horton
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-28 16:01 PDT by Tim Horton
Modified: 2022-11-05 12:33 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2022-10-28 16:01:43 PDT
WebKit should not depend on CA's implicit auto-upgrade to extendedSRGB
Comment 1 Tim Horton 2022-10-28 16:03:03 PDT
<rdar://problem/101695786>
Comment 2 Tim Horton 2022-10-28 16:05:55 PDT
Pull request: https://github.com/WebKit/WebKit/pull/5927
Comment 3 EWS 2022-11-05 12:33:26 PDT
Committed 256361@main (831c68acbcc6): <https://commits.webkit.org/256361@main>

Reviewed commits have been landed. Closing PR #5927 and removing active labels.