WebKit should not depend on CA's implicit auto-upgrade to extendedSRGB https://bugs.webkit.org/show_bug.cgi?id=247218 rdar://101695786

Reviewed by Said Abou-Hallawa and Sam Weinig.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.h:
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::colorSpace const):
(WebKit::RemoteLayerBackingStore::ensureFrontBuffer):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.mm:
(WebKit::RemoteLayerBackingStoreCollection::allocateBufferForBackingStore):
We currently depend on a special case in CA to upgrade RemoteLayerBackingStore's
backing store to extended SRGB in the case where we are using half-float pixel
formats. We ask for standard SRGB, but they notice the floating point format
and upgrade us.

Instead of doing this, we should explicitly say that we want extended SRGB
when using such backing store.

Canonical link: https://commits.webkit.org/256361@main